chore(.gitignore): updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
-typings
 node_modules
 .idea
 .vs
 .vscode
-.idea
-bin
+bin/
 obj
 output
 temp
-lib
+lib/
 npm-debug.log
-Would skip repository angular4-swagger-client-generator/
