--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,23 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es5",
-    "module":"commonjs",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "module": "commonjs",
+    "lib": [
+      "ES2015",
+      "es2016",
+      "es2017",
+      "dom"
+    ],
+    "noLib": false,
     "strict": true,
     "sourceMap": true,
     "declaration": true,
+    "declarationDir": "dist/types",
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "noImplicitAny": true,
     "emitDecoratorMetadata": true,
-    "declarationDir": "dist/types",
-    "outDir": "compiled",
+    "outDir": "dist",
     "typeRoots": [
       "node_modules/@types"
     ]
