--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,16 @@
     "target": "es5",
     "module": "commonjs",
     "lib": [
-      "ES2015",
+      "es2015",
       "es2016",
       "es2017",
       "dom"
     ],
     "noLib": false,
+    "removeComments": true,
     "strict": true,
     "sourceMap": true,
-    "declaration": true,
-    "declarationDir": "dist/types",
+    "declaration": false,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "noImplicitAny": true,
