--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "generate": "node ./dist/main.js",
     "build": "rimraf dist && tsc",
     "gen": "ts-node ./src/main.ts",
+    "gen-sports": "rimraf ./examples/sports/api && ts-node ./src/main.ts -s ./examples/sports/swagger.yaml -o ./examples/sports/api",
+    "gen-esquare": "rimraf ./examples/esquare/api && ts-node ./src/main.ts -s ./examples/esquare/swagger.yaml -o ./examples/esquare/api",
     "release": "npm run build && standard-version --tag-prefix=''"
   },
   "dependencies": {
