--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     "http",
     "httpclient"
   ],
+  "engines": {
+    "node": ">=8.9.1",
+    "yarn": ">=1.3.2"
+  },
   "license": "MIT",
   "scripts": {
     "generate": "node ./dist/main.js",
@@ -75,7 +79,7 @@
     "rimraf": "^2.5.2",
     "standard-version": "^4.3.0",
     "swagger-schema-official": "^2.0.0-bab6bed",
-    "ts-node": "^4.1.0",
+    "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
     "tslint-immutable": "^4.5.2",
     "typescript": "^2.7.2"
