refactor(lint, typings): moved and solved warnings
fixes #36

Signed-off-by: Vojtech Masek <vojtech.masek@flowup.cz>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,11 @@
     "outDir": "dist",
     "typeRoots": [
       "node_modules/@types",
-      "typings.d.ts"
+      "src/typings.d.ts"
     ]
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "tests/tests.ts"
   ]
 }
