--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "type": "git",
     "url": "git@github.com:flowup/api-client-generator.git"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "keywords": [
     "swagger",
     "rest",
