build(npm): project files determined from npm ignore file
Signed-off-by: Vojtech Masek <vojtech.masek@flowup.cz>

--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,13 @@
-src/*
-output*/
-ref*/
 node_modules/
-examples/*
+output*/
+src/*
+tests/
+.drone.yml
 .gitignore
 .idea
-tsconfig.json
-yarn.lock
 CODE_OF_CONDUCT.md
+package-lock.json
 PULL_REQUEST_TEMPLATE.md
+tsconfig.json
+tslint.json
+yarn.lock
