--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "build": "rimraf dist && tsc",
     "lint": "tslint -p tsconfig.json -c tslint.json 'src/**/*.ts' 'src/tests.ts'",
     "gen": "ts-node ./src/main.ts",
+    "gen-custom": "rimraf ./tests/custom/api && ts-node ./src/main.ts -s ./tests/custom/swagger.yaml -o ./tests/custom/api",
     "gen-sports": "rimraf ./tests/sports/api && ts-node ./src/main.ts -s ./tests/sports/swagger.yaml -o ./tests/sports/api",
     "gen-esquare": "rimraf ./tests/esquare/api && ts-node ./src/main.ts -s ./tests/esquare/swagger.yaml -o ./tests/esquare/api",
     "gen-gcloud-firestore": "rimraf ./tests/gcloud-firestore/api && ts-node ./src/main.ts -s ./tests/gcloud-firestore/swagger.yaml -o ./tests/gcloud-firestore/api",
