build(ci): node version and npm ci

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,8 @@
 pipeline:
   build:
-    image: node:9
+    image: node
     commands:
-      - npm install
+      - npm ci
       - npm run lint
       - npm run test
       - npm run build
