--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "gen-gcloud-firestore": "rimraf ./tests/gcloud-firestore/api && ts-node ./src/main.ts -s ./tests/gcloud-firestore/swagger.yaml -o ./tests/gcloud-firestore/api",
     "gen-github": "rimraf ./tests/github/api && ts-node ./src/main.ts -s ./tests/github/swagger.yaml -o ./tests/github/api",
     "gen-sports": "rimraf ./tests/sports/api && ts-node ./src/main.ts -s ./tests/sports/swagger.yaml -o ./tests/sports/api",
-    "release": "npm run build && standard-version --tag-prefix=''",
+    "release": "npm run test && npm run build && standard-version --tag-prefix=''",
     "test": "ts-node ./src/tests.ts"
   },
   "dependencies": {
