--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "fs-extra": "^6.0.1",
     "mustache": "^2.3.0",
     "optimist": "^0.6.1",
-    "swagger-parser": "^5.0.0"
+    "swagger-parser": "^5.0.0",
+    "which": "^1.3.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.3",
@@ -69,6 +70,7 @@
     "@types/rimraf": "^2.0.2",
     "@types/swagger-parser": "^4.0.2",
     "@types/swagger-schema-official": "^2.0.10",
+    "@types/which": "^1.3.1",
     "dir-compare": "^1.4.0",
     "rimraf": "^2.5.2",
     "standard-version": "^4.4.0",
