--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
     "generate": "node ./dist/main.js",
     "build": "npm run lint && rimraf dist && tsc",
     "lint": "tslint -p tsconfig.json -c tslint.json src/**/*.ts",
-    "gen": "ts-node ./src/main.ts",
-    "gen-custom": "rimraf ./tests/custom/api && ts-node ./src/main.ts -s ./tests/custom/swagger.yaml -o ./tests/custom/api",
-    "gen-esquare": "rimraf ./tests/esquare/api && ts-node ./src/main.ts -s ./tests/esquare/swagger.yaml -o ./tests/esquare/api",
-    "gen-gcloud-firestore": "rimraf ./tests/gcloud-firestore/api && ts-node ./src/main.ts -s ./tests/gcloud-firestore/swagger.yaml -o ./tests/gcloud-firestore/api",
-    "gen-github": "rimraf ./tests/github/api && ts-node ./src/main.ts -s ./tests/github/swagger.yaml -o ./tests/github/api",
-    "gen-filtered-api": "rimraf ./tests/filtered-api/api && ts-node ./src/main.ts -s ./tests/filtered-api/swagger.json -o ./tests/filtered-api/api -t DummySelector,Project,NonExistingTag -m",
-    "gen-with-all-tags": "rimraf ./tests/with-all-tags/api && ts-node ./src/main.ts -s ./tests/with-all-tags/swagger.json -o ./tests/with-all-tags/api -t all",
+    "gen": "ts-node --files ./src/main.ts",
+    "gen-custom": "rimraf ./tests/custom/api && ts-node --files ./src/main.ts -s ./tests/custom/swagger.yaml -o ./tests/custom/api",
+    "gen-esquare": "rimraf ./tests/esquare/api && ts-node --files ./src/main.ts -s ./tests/esquare/swagger.yaml -o ./tests/esquare/api",
+    "gen-gcloud-firestore": "rimraf ./tests/gcloud-firestore/api && ts-node --files ./src/main.ts -s ./tests/gcloud-firestore/swagger.yaml -o ./tests/gcloud-firestore/api",
+    "gen-github": "rimraf ./tests/github/api && ts-node --files ./src/main.ts -s ./tests/github/swagger.yaml -o ./tests/github/api",
+    "gen-filtered-api": "rimraf ./tests/filtered-api/api && ts-node --files ./src/main.ts -s ./tests/filtered-api/swagger.json -o ./tests/filtered-api/api -t DummySelector,Project,NonExistingTag -m",
+    "gen-with-all-tags": "rimraf ./tests/with-all-tags/api && ts-node --files ./src/main.ts -s ./tests/with-all-tags/swagger.json -o ./tests/with-all-tags/api -t all",
     "release": "npm run test && npm run build && standard-version --tag-prefix=''",
-    "test": "ts-node ./src/tests.ts"
+    "test": "ts-node --files ./src/tests.ts"
   },
   "dependencies": {
     "fs-extra": "^6.0.1",
@@ -65,9 +65,9 @@
     "which": "^1.3.1"
   },
   "devDependencies": {
-    "@types/fs-extra": "^5.0.3",
+    "@types/fs-extra": "^5.0.4",
     "@types/mustache": "^0.8.31",
-    "@types/node": "^10.3.4",
+    "@types/node": "^10.5.2",
     "@types/optimist": "0.0.29",
     "@types/rimraf": "^2.0.2",
     "@types/swagger-parser": "^4.0.2",
@@ -77,7 +77,7 @@
     "rimraf": "^2.5.2",
     "standard-version": "^4.4.0",
     "swagger-schema-official": "^2.0.0-bab6bed",
-    "ts-node": "^6.1.2",
+    "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "tslint-immutable": "^4.6.0",
     "typescript": "^2.9.2"
