build(deps): angular test project dependencies post-install and update
Signed-off-by: Vojtech Mašek <vojtech.masek@flowup.cz>

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "gen-filtered-api": "rimraf ./tests/filtered-api/api && ts-node --files ./src/main.ts -s ./tests/filtered-api/swagger.json -o ./tests/filtered-api/api -t DummySelector,Project,NonExistingTag -m",
     "gen-with-all-tags": "rimraf ./tests/with-all-tags/api && ts-node --files ./src/main.ts -s ./tests/with-all-tags/swagger.json -o ./tests/with-all-tags/api -t all",
     "release": "npm run test && npm run build && standard-version --tag-prefix=''",
-    "test": "ts-node --files ./src/tests.ts"
+    "test": "ts-node --files ./src/tests.ts",
+    "postinstall": "cd tests/test-angular-project && npm i"
   },
   "dependencies": {
     "fs-extra": "^6.0.1",
