--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -4,5 +4,5 @@ steps:
   entrypoint: '/bin/bash'
   args:
   - '-c'
-  - 'npm run ci:install && npm run lint && npm run tests && npm run build'
+  - 'npm run dev:install && npm run lint && npm run tests && npm run build'
   waitFor: ['-']
