--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "gen-filtered-api": "rimraf ./tests/filtered-api/api && ts-node --files ./src/main.ts -s ./tests/filtered-api/swagger.json -o ./tests/filtered-api/api -t DummySelector,Project,NonExistingTag -m",
     "gen-with-all-tags": "rimraf ./tests/with-all-tags/api && ts-node --files ./src/main.ts -s ./tests/with-all-tags/swagger.json -o ./tests/with-all-tags/api -t all",
     "release": "npm run tests && npm run build && standard-version --tag-prefix=''",
-    "test": "ts-node --files=tsconfig.json node_modules/jasmine/bin/jasmine --config=jasmine.json",
+    "test": "jest",
     "intg-tests:gen-all-tags": "rimraf tests/test-angular-project/src/api-all-tags && npm run gen -- src/main.ts -s tests/test-angular-project/swagger.yaml -o tests/test-angular-project/src/api-all-tags -t all",
     "intg-tests:gen-no-tag": "rimraf tests/test-angular-project/src/api-no-tags && npm run gen -- src/main.ts -s tests/test-angular-project/swagger.yaml -o tests/test-angular-project/src/api-no-tags",
     "intg-tests:clear-gen": "rimraf tests/test-angular-project/src/api-no-tags && rimraf tests/test-angular-project/src/api-all-tags",
@@ -73,7 +73,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.4",
-    "@types/jasmine": "^3.3.5",
+    "@types/jest": "^24.0.13",
     "@types/mustache": "^0.8.32",
     "@types/node": "^10.12.18",
     "@types/optimist": "0.0.29",
@@ -82,13 +82,28 @@
     "@types/swagger-schema-official": "^2.0.14",
     "@types/which": "^1.3.1",
     "dir-compare": "^1.5.4",
-    "jasmine": "^3.3.1",
+    "jest": "^24.8.0",
+    "jest-preset-typescript": "^1.2.0",
+    "jest-sonar-reporter": "^2.0.0",
     "rimraf": "^2.6.3",
     "standard-version": "^4.4.0",
     "swagger-schema-official": "^2.0.0-bab6bed",
+    "ts-jest": "^24.0.2",
     "ts-node": "^7.0.1",
     "tslint": "^5.12.1",
     "tslint-immutable": "^5.0.1",
     "typescript": "^3.2.2"
+  },
+  "jest": {
+    "preset": "jest-preset-typescript",
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupJest.ts"
+    ],
+    "testRegex": "^\\/src\\/.*|\\.tests?\\.ts$",
+    "modulePaths": [
+      "<rootDir>/node_modules",
+      "<rootDir>"
+    ],
+    "testResultsProcessor": "jest-sonar-reporter"
   }
 }
