--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,7 @@
     "moduleResolution": "node",
     "target": "es5",
     "module": "commonjs",
-    "lib": [
-      "es2015",
-      "es2016",
-      "es2017",
-      "es2017.object",
-      "dom"
-    ],
+    "lib": ["es2015", "es2016", "es2017", "es2017.object", "dom"],
     "noLib": false,
     "removeComments": true,
     "strict": true,
@@ -24,12 +18,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "outDir": "dist",
-    "typeRoots": [
-      "node_modules/@types",
-      "src/typings.d.ts"
-    ]
+    "typeRoots": ["node_modules/@types", "src/typings.d.ts"]
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
