--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-client-generator",
   "version": "4.6.2",
-  "description": "Angular REST API client generator from Swagger YAML or JSON file with camel case settigs",
+  "description": "Angular REST API client generator from Swagger YAML or JSON file with camel case settings",
   "homepage": "https://github.com/flowup/api-client-generator/blob/master/README.md",
   "main": "src/main.ts",
   "author": {
@@ -25,6 +25,8 @@
   "keywords": [
     "swagger",
     "rest",
+    "angular9",
+    "angular8",
     "angular7",
     "angular6",
     "angular5",
@@ -68,35 +70,35 @@
     "dev:install": "npm ci --silent && cd tests/test-angular-project && npm ci --silent"
   },
   "dependencies": {
-    "fs-extra": "^8.1.0",
-    "mustache": "^3.1.0",
+    "fs-extra": "^9.0.0",
+    "mustache": "^4.0.1",
     "optimist": "^0.6.1",
     "swagger-parser": "^6.0.5",
-    "which": "^2.0.1"
+    "which": "^2.0.2"
   },
   "devDependencies": {
-    "@types/fs-extra": "^8.0.1",
-    "@types/jest": "^24.0.21",
-    "@types/mustache": "^0.8.32",
-    "@types/node": "^12.12.5",
+    "@types/fs-extra": "^8.1.0",
+    "@types/jest": "^25.2.1",
+    "@types/mustache": "^4.0.1",
+    "@types/node": "^13.11.1",
     "@types/optimist": "0.0.29",
-    "@types/rimraf": "^2.0.3",
+    "@types/rimraf": "^3.0.0",
     "@types/swagger-parser": "^4.0.3",
-    "@types/swagger-schema-official": "^2.0.19",
+    "@types/swagger-schema-official": "^2.0.21",
     "@types/which": "^1.3.2",
-    "dir-compare": "^1.8.0",
-    "husky": "^3.1.0",
-    "jest": "^24.9.0",
+    "dir-compare": "^2.2.0",
+    "husky": "^4.2.5",
+    "jest": "^25.3.0",
     "jest-preset-typescript": "^1.2.0",
     "jest-sonar-reporter": "^2.0.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
-    "rimraf": "^3.0.0",
-    "standard-version": "^7.0.0",
+    "rimraf": "^3.0.2",
+    "standard-version": "^7.1.0",
     "swagger-schema-official": "^2.0.0-bab6bed",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
+    "ts-jest": "^25.3.1",
+    "ts-node": "^8.8.2",
+    "tslint": "^6.1.1",
     "tslint-immutable": "^6.0.1",
     "typescript": "^3.6.4"
   },
